# charm-cinder

./: .coverage  .gitignore  .gitreview  .zuul.yaml  Makefile  README.md  actions.yaml  charm-helpers-hooks.yaml  charm-helpers-tests.yaml  charm-helpers.yaml  config.yaml  metadata.yaml  osci.yaml  requirements.txt  setup.cfg  tags  test-requirements-precise.txt  test-requirements.txt  tox.ini
actions/: actions.py  cinder_manage.py  git_reinstall.py  openstack_upgrade.py  remove-services  remove_services.py  security_checklist.py
hooks/: cinder_contexts.py  cinder_hooks.py  cinder_utils.py  pgsql-db-relation-broken  pgsql-db-relation-joined  postgresql-db-relation-changed  storage.bootstrap
templates/: cinder.conf
tests/: 00-setup  014-basic-precise-icehouse  015-basic-trusty-icehouse  016-basic-trusty-juno  017-basic-trusty-kilo  018-basic-trusty-liberty  018-basic-utopic-juno  019-basic-trusty-mitaka  020-basic-wily-liberty  021-basic-xenial-mitaka  050-basic-trusty-icehouse-git  051-basic-trusty-juno-git  052-basic-trusty-kilo-git  11-basic-precise-folsom  12-basic-precise-grizzly  13-basic-precise-havana  16-vivid-kilo  22-basic-vivid-kilo-git  README  basic_deployment.py  dev-basic-bionic-queens  dev-basic-cosmic-rocky  dev-basic-disco-stein  dev-basic-xenial-newton  dev-basic-yakkety-newton  dfs-basic-trusty-icehouse  dfs-basic-trusty-kilo  gate-basic-artful-pike  gate-basic-bionic-rocky  gate-basic-bionic-stein  gate-basic-precise-icehouse  gate-basic-trusty-icehouse  gate-basic-trusty-kilo  gate-basic-trusty-liberty  gate-basic-trusty-mitaka  (+6 more)
(+65 files in other folders)
