[metadata]
name = charm-cinder
description = Charm module for OpenStack Cinder
long_description = file: README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/charm-guide/latest/
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[nosetests]
verbosity=2
with-coverage=1
cover-erase=1
cover-package=hooks
